fixed spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ main {
 #container {
     margin: 0 auto;
     position: absolute;
+    top: 100px;
 }
 
 #introduction {
@@ -109,10 +110,11 @@ main {
 .columns {
     position: relative;
     display: grid;
-    left: 95px;
+    left: -120px;
     bottom: 0;
     padding-bottom: 40px;
-    width: 80%;
+    padding-top: 10px;
+    width: 70%;
     grid-template-columns: 33% 33% 33%;
     column-gap: 1rem;
 }
@@ -213,6 +215,12 @@ p {
     max-width: 800px;
 }
 
+.other-project {
+    padding: 10px 0 10px 5px;
+    color: #7b7b7b;
+    font-size: 1rem;
+}
+
 
 /* Footer */
 
@@ -222,6 +230,13 @@ footer {
 }
 
 /* Media queries */
+
+@media screen and (max-width: 1400px) {
+    .columns {
+        left: 35px;
+        width: 90%
+    }
+}
 
 @media screen and (max-width: 1200px) {
 
@@ -234,6 +249,13 @@ footer {
         left: 95px;
         width: 80%;
     }
+
+    .columns {
+        left: 35px;
+        padding-bottom: 35px;
+        width: 85%;
+    }
+    
 }
 
 @media screen and (max-width: 1000px) {
